<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout"
    android:focusableInTouchMode="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                style="@style/Questions"
                android:text="@string/question_Nr.1" />

            <LinearLayout style="@style/LayoutET">

                <EditText
                    android:id="@+id/questionNr_1"
                    style="@style/EditText"
                    android:backgroundTint="@color/colorHintline"
                    android:hint="@string/hintAnswer_questionNr1" />

            </LinearLayout>

            <TextView
                style="@style/Questions"
                android:text="@string/question_Nr.2" />

            <LinearLayout
                android:id="@+id/Check_Box"
                style="@style/LinearLayoutCB">

                <CheckBox
                    android:id="@+id/CB_answer_1_4"
                    style="@style/CheckBox"
                    android:buttonTint="@color/colorAccent"
                    android:onClick="checkBox"
                    android:text="@string/checkbox_1" />

                <CheckBox
                    android:id="@+id/CB_answer_2_4"
                    style="@style/CheckBox"
                    android:buttonTint="@color/colorAccent"
                    android:onClick="checkBox"
                    android:text="@string/checkbox_2" />

                <CheckBox
                    android:id="@+id/CB_answer_3_4"
                    style="@style/CheckBox"
                    android:buttonTint="@color/colorAccent"
                    android:onClick="checkBox"
                    android:text="@string/checkbox_3" />

                <CheckBox
                    android:id="@+id/CB_answer_4_4"
                    style="@style/CheckBox"
                    android:buttonTint="@color/colorAccent"
                    android:onClick="checkBox"
                    android:text="@string/checkbox_4" />
            </LinearLayout>

            <TextView
                style="@style/Questions"
                android:text="@string/question_Nr.3" />

            <LinearLayout
                android:id="@+id/rg1"
                style="@style/LinearLayoutCB">

                <RadioGroup
                    android:id="@+id/radioGroup_1"
                    style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/RB1_answer_1_3"
                        style="@style/RadioButton"
                        android:buttonTint="@color/colorAccent"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/radioButton_1" />

                    <RadioButton
                        android:id="@+id/RB1_answer_2_3"
                        style="@style/RadioButton"
                        android:buttonTint="@color/colorAccent"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/radioButton_2" />

                    <RadioButton
                        android:id="@+id/RB1_answer_3_3"
                        style="@style/RadioButton"
                        android:buttonTint="@color/colorAccent"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/radioButton_3" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/Questions"
                android:text="@string/question_Nr.4" />

            <LinearLayout style="@style/LayoutET">

                <EditText
                    android:id="@+id/questionNr_4"
                    style="@style/EditText"
                    android:backgroundTint="@color/colorHintline"
                    android:hint="@string/hintAnswer_questionNr4" />

            </LinearLayout>

            <TextView
                style="@style/Questions"
                android:text="@string/question_Nr.5" />

            <LinearLayout
                android:id="@+id/RG2"
                style="@style/LinearLayoutCB"
                android:background="@drawable/answer_shape">

                <RadioGroup
                    android:id="@+id/radioGroup_2"
                    style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/RB2_answer_1_2"
                        style="@style/RadioButton"
                        android:buttonTint="@color/colorAccent"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/RB2_1" />

                    <RadioButton
                        android:id="@+id/RB2_answer_2_2"
                        style="@style/RadioButton"
                        android:buttonTint="@color/colorAccent"
                        android:onClick="onRadioButtonClick"
                        android:text="@string/RB2_2" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Send"
                    style="@style/Button"
                    android:onClick="send"
                    android:text="@string/send" />

                <Button
                    android:id="@+id/Reset"
                    style="@style/Button"
                    android:onClick="reset"
                    android:text="@string/reset" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
